@@ -25,6 +25,13 @@ INITIAL_SCREEN=0;
 CPUFREQ=222;
 USB_AUTOSTART=0;
 
+[PLAYBACK]
+;PLAYMODE_NORMAL		0
+;PLAYMODE_SINGLE		1
+;PLAYMODE_REPEAT		2
+;PLAYMODE_GLOBAL_NEXT	3
+MODE = 0;
+
 [DEBUGGING]
 LOGFILE=PSPRadio.log;
 ;Keep at least at 50 (for informational messages), 80 (only errors), 100 (nothing)
